--- a/style/style.css
+++ b/style/style.css
@@ -4,11 +4,12 @@
 }
 
 body {
+    
     display: grid;
     align-items: center;
     align-content: center;
     padding: 1rem;
-    margin: 1rem;
+
     background-color:white;
     
 }
@@ -20,6 +21,7 @@ body {
   grid-column: 1/9;
   grid-row: 1/2;
   width: 1020px;
+  margin: auto;
   border-radius: 25px;
   box-shadow: 0 10px 10px rgb(69, 200, 223);
     
@@ -55,18 +57,22 @@ font-family: Arial, Helvetica, sans-serif;
 .list {
     display: grid ;
     grid-column: 1/9;
-    margin-left: 40px;
+    margin: auto;
+    
+
     
     
 }
 list p{
+    
     color: black;
     
 }
 ul{
-    margin: 10px;
-    padding: 5px;
+    margin: auto;
+    padding: 15px;
     font-size: 25px;
+    margin-left: 50px;
 }
 hr{
     border: 1px solid rgb(9, 19, 196);
@@ -78,26 +84,30 @@ hr{
 
 h2 {
 
-    float: left;
-    margin: 20px;
-    margin-left: 5px;
+    margin-top: 40px;
     padding: 5px;
     font-size: 40px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
+}
+footer{
+    display: grid;
+    grid-column: 1/9;
+    grid-row: 3/9;
+    margin: auto;
+
 }
 
 footer p{
     font-size: 20px;
     color: aliceblue;
     text-align: center;
-    margin: 5px;
+    margin: auto;
+    
 
 }
 
 .footer-container {
-    
-    
     display: grid;
     margin-top: 35px;
     height: 100px;
