--- a/lesson2/css/style.css
+++ b/lesson2/css/style.css
@@ -1,110 +1,93 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    padding: 1rem;
-    background-color:white;
-    
+  font-family: "Roboto", sans-serif;
+  padding: 1rem;
+  background-color: white;
 }
 
-@media screen and (max-width: 40em) {
 main {
-    
-    grid-template-columns: 1fr;
-    
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: auto;
+  gap: 2rem;
+  padding: 1rem;
+  text-align: center;
 }
 
-
-@media screen and (max-width: 1020px){
-div p {
-    font-size: 15px;
-    }
-}
-main {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    margin: auto;
-    gap: 2rem;
-    padding: 1rem;
-    text-align: center;
-
-
-
-}
-
-header{
+header {
   background-color: rgb(40, 7, 230);
   width: 100%;
   margin: auto;
   border-radius: 25px;
   box-shadow: 0 10px 10px rgb(69, 200, 223);
-    
-
 }
 
-main div {
-    /* width: 35%; */
-    /* text-align: center; */
-    background-color: rgb(232, 240, 241);
-    border-radius: 25px;
-    
-
+main section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  background-color: rgb(232, 240, 241);
+  border-radius: 25px;
 }
 
 h1 {
-font-family: 'Open Sans', sans-serif;
-font-size: 40px;
-text-align: center;  
-padding: .5rem;
-color: aliceblue;
-
+  font-family: "Open Sans", sans-serif;
+  font-size: 40px;
+  text-align: center;
+  padding: 0.5rem;
+  color: aliceblue;
 }
 
-
-   
-.image,img {
- margin: 0 auto;
- border-radius: 25px;
- padding: 1rem;
- height: auto;
-
-
-   
-   
+.image,
+img {
+  margin: 0 auto;
+  border-radius: 25px;
+  padding: 1rem;
+  height: auto;
 }
 
-h2, a {
-    background-color: rgb(11, 11, 11);
-    color: rgb(10, 7, 235);
-    border-radius: 25px;
-    padding: 1rem;
-    font-size: 22px;
-    text-align: center;
-    margin: .5rem;
-    
-
+h2,
+a {
+  background-color: rgb(11, 11, 11);
+  color: rgb(10, 7, 235);
+  border-radius: 25px;
+  padding: 1rem;
+  font-size: 22px;
+  text-align: center;
+  margin: 0.5rem;
 }
 p {
-    padding: .5rem;
-    margin: auto;
-    
-}
-    
-    
-footer{
-    color: white;
-    margin: auto;
-    width: 100%;
-    background-color:  rgb(40, 7, 230);
-    text-align: center;
-    box-shadow: 0 10px 10px rgb(69, 200, 223);
-    border-radius: 25px;
-
+  padding: 0.5rem;
+  margin: auto;
 }
 
+footer {
+  color: white;
+  margin: auto;
+  width: 100%;
+  background-color: rgb(40, 7, 230);
+  text-align: center;
+  box-shadow: 0 10px 10px rgb(69, 200, 223);
+  border-radius: 25px;
+}
+@media screen and (max-width: 40em) {
+  main {
+    grid-template-columns: 1fr;
+  }
+}
 
+@media screen and (max-width: 100em) {
+  main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  div p {
+    font-size: 15px;
+  }
+}
