--- a/chamber/mystyle.css
+++ b/chamber/mystyle.css
@@ -16,7 +16,7 @@
   width: 100%;
   border-radius: 50%;
   padding: 10px;
-  height: auto;
+  height: 180px;
 }
 ul {
   display: flex;
@@ -37,55 +37,60 @@ nav ul li {
 
 #date {
   text-align: center;
-  background-color: rgb(6, 45, 240);
   font-size: 25px;
   background-color: rgb(15, 35, 215);
   padding: 16px;
 }
 main {
   display: grid;
-  grid-template-columns: 1fr;
-  gap: 5px;
+  grid-template-columns: 16em 1fr 16em;
+  gap: 15px;
+  padding: 2rem;
 }
 .hero {
-  grid-row: 1;
+  padding: 25px;
+  grid-row: 1/3;
   background-color: gainsboro;
   border: 1px solid gray;
 }
 .event {
-  grid-row: 2;
+  padding: 25px;
+  grid-row: 1;
   background-color: gainsboro;
-  width: auto;
   border: 1px solid gray;
 }
 .weather {
-  grid-row: 3;
+  padding: 25px;
+  grid-row: 2;
   background-color: gainsboro;
   border: 1px solid gray;
 }
 .join {
-  grid-row: 5;
+  padding: 25px;
+  grid-row: 3;
   background-color: gainsboro;
   border: 1px solid gray;
 }
 
 .news {
-  grid-row: 4;
+  padding: 25px;
+  grid-row: 3/3;
   background-color: gainsboro;
   border: 1px solid gray;
 }
 .box {
+  text-align: center;
+  grid-row: 1/4;
   background-color: gainsboro;
   border: 1px solid gray;
 }
 .box1,
 .box2,
 .box3 {
-  display: flex;
-  flex-direction: column;
-  margin: 5px;
+  height: 162px;
   padding: 2rem;
-  border: 1px solid black;
+  margin: 10px;
+  border: 1px solid gray;
 }
 footer {
   background-color: rgb(6, 45, 240);
@@ -94,4 +99,17 @@ footer {
   align-items: center;
   justify-content: center;
   padding: 32px;
+}
+.footer-container {
+  padding: 25px;
+}
+
+.info_box {
+  display: flex;
+  border-bottom-style: solid;
+  padding: 10px;
+}
+.contact {
+  text-align: center;
+  padding: 68px;
 }
