--- a/chamber/style/large.css
+++ b/chamber/style/large.css
@@ -1,61 +1,45 @@
-@media screen and (min-width: 35em) {
+@media screen and (min-width: 70em) {
   main {
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
+    grid-template-columns: 16em 1fr 16em;
+    gap: 15px;
     padding: 2rem;
   }
-
   #button {
-    display: block;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 1.5rem;
-    padding: 2rem;
-    color: #fefcfd;
-    background: transparent;
-    border: none;
+    display: none;
   }
 
   .section_1 {
     background-color: rgb(6, 45, 240);
     padding: 5px 0;
-    display: grid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 0.5px auto;
-    justify-items: center;
   }
 
   .logo img {
+    width: 100%;
     border-radius: 50%;
     padding: 10px;
-    height: 150px;
+    height: 180px;
   }
-
-  .social {
-    position: relative;
-    top: -178px;
-    right: -142px;
-  }
-
-  ul li {
+  ul {
     display: flex;
     justify-content: center;
-    list-style: none;
-    background-color: white;
+    list-style-type: none;
+    overflow: hidden;
   }
-  ul li a {
-    display: block;
+  .social {
+    text-align: right;
+    padding: 25px;
+  }
+  nav ul li a {
+    display: flex;
+    color: black;
     text-align: center;
     padding: 10px;
     text-decoration: none;
-  }
-
-  nav ul {
-    display: none;
-  }
-  nav ul.open {
-    display: block;
   }
 
   #date {
@@ -64,87 +48,71 @@
     background-color: rgb(15, 35, 215);
     padding: 16px;
   }
-  main {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 5px;
-    padding: 2rem;
-  }
+
   .hero {
-    height: 12rem;
     padding: 25px;
-    grid-row: 1;
-    grid-column: 1/3;
+    grid-row: 1/3;
     background-color: gainsboro;
     border: 1px solid gray;
   }
   .event {
-    padding: 7rem;
-    grid-row: 7;
-    grid-column: 2/2;
+    padding: 25px;
+    grid-row: 1;
     background-color: gainsboro;
     border: 1px solid gray;
   }
   .weather {
     padding: 25px;
-    grid-row: 7;
+    grid-row: 2;
     background-color: gainsboro;
     border: 1px solid gray;
   }
   .join {
-    height: 12rem;
     padding: 25px;
     grid-row: 3;
-    grid-column: 1/3;
     background-color: gainsboro;
     border: 1px solid gray;
   }
 
   .news {
-    height: 12rem;
     padding: 25px;
-    grid-row: 2;
-    grid-column: 1/3;
+    grid-row: 3/3;
     background-color: gainsboro;
     border: 1px solid gray;
   }
   .box {
-    display: flex;
-    grid-column: 1/3;
-    justify-content: center;
     text-align: center;
+    grid-row: 1/4;
     background-color: gainsboro;
     border: 1px solid gray;
   }
   .box1,
-  .box2 {
-    padding: 7rem;
-    margin: 10px;
-    border: 1px solid gray;
-  }
+  .box2,
   .box3 {
-    display: none;
-
+    height: 162px;
     padding: 2rem;
     margin: 10px;
     border: 1px solid gray;
   }
   footer {
     background-color: rgb(6, 45, 240);
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    padding: 32px;
   }
   .footer-container {
-    padding: 20px;
+    padding: 25px;
   }
 
   .info_box {
-    text-align: center;
+    display: flex;
     border-bottom-style: solid;
+    padding: 10px;
   }
   .contact {
     text-align: center;
-    padding: 10px;
-  }
-  .far fa-map {
-    font-size: 30px;
+    padding: 68px;
   }
 }
