--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -7,10 +7,11 @@
   }
 
   #button {
-    display: block;
-    position: absolute;
-    top: 10px;
-    left: 10px;
+    font-size: 3rem;
+    /* display: block; */
+    /* position: absolute; */
+    top: 0px;
+    /* left: 10px; */
     font-size: 1.5rem;
     padding: 2rem;
     color: #fefcfd;
