--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -34,6 +34,11 @@
   top: -178px;
   right: -142px;
 }
+picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 ul li {
   display: flex;
@@ -68,15 +73,34 @@ main {
   padding: 2rem;
 }
 .hero {
-  padding: 25px;
+  /* padding: 25px; */
   grid-row: 1;
   background-color: gainsboro;
   border: 1px solid gray;
+  object-fit: cover;
+}
+.hero h1 {
+  position: absolute;
+  text-align: center;
+  padding: 5px;
+  font-size: 18px;
+  color: yellow;
+}
+.hero button {
+  position: absolute;
+  right: 3rem;
+  bottom: 19rem;
+  border: 1px solid black;
+  border-radius: 25px;
+  padding: 10px;
+  background-color: black;
+  color: white;
 }
 .event {
   padding: 25px;
   background-color: gainsboro;
   border: 1px solid gray;
+  text-align: center;
 }
 .weather {
   padding: 25px;
@@ -85,30 +109,30 @@ main {
 }
 .join {
   display: none;
+  background-color: gainsboro;
+  border: 1px solid gray;
 }
 
 .news {
   padding: 25px;
-  grid-row: ;
   background-color: gainsboro;
   border: 1px solid gray;
+  text-align: center;
 }
 .box {
   text-align: center;
-  grid-row: ;
   background-color: gainsboro;
   border: 1px solid gray;
 }
 .box1,
 .box2 {
-  height: 162px;
-  padding: 2rem;
+  padding: 1rem;
   margin: 10px;
   border: 1px solid gray;
+  object-fit: cover;
 }
 .box3 {
   display: none;
-  height: 162px;
   padding: 2rem;
   margin: 10px;
   border: 1px solid gray;
