--- a/chamber/style/large.css
+++ b/chamber/style/large.css
@@ -1,9 +1,17 @@
 @media screen and (min-width: 60em) {
   main {
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 16em 1fr 16em;
     gap: 15px;
     padding: 2rem;
+  }
+  nav ul {
+    display: flex;
+    font-size: 22px;
+    column-gap: 26px;
+  }
+  picture img {
+    height: auto;
   }
   #button {
     display: none;
@@ -31,8 +39,9 @@
     overflow: hidden;
   }
   .social {
-    text-align: right;
     padding: 25px;
+    top: auto;
+    right: auto;
   }
   nav ul li a {
     display: flex;
@@ -48,51 +57,68 @@
     background-color: rgb(15, 35, 215);
     padding: 16px;
   }
-
+  .hero-pic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .weather-pic {
+    display: block;
+  }
   .hero {
-    padding: 25px;
     grid-row: 1/3;
-    background-color: gainsboro;
-    border: 1px solid gray;
+    grid-column: 2/3;
+  }
+  .hero h1 {
+    padding: 15px;
+    font-size: 40px;
+  }
+  .hero button {
+    right: 20rem;
+    bottom: 1rem;
+    padding: 20px;
+    font-size: 35px;
   }
   .event {
-    padding: 25px;
     grid-row: 1;
-    background-color: gainsboro;
-    border: 1px solid gray;
   }
+
   .weather {
-    padding: 25px;
+    /* padding: 25px; */
     grid-row: 2;
-    background-color: gainsboro;
-    border: 1px solid gray;
+  }
+  .weather h1 {
+    text-align: center;
+    padding: 5px;
   }
   .join {
+    display: grid;
+    text-align: center;
     padding: 25px;
     grid-row: 3;
-    background-color: gainsboro;
-    border: 1px solid gray;
+    grid-column: 2/1;
   }
 
   .news {
     padding: 25px;
     grid-row: 3/3;
-    background-color: gainsboro;
-    border: 1px solid gray;
+    grid-column: 2/2;
   }
   .box {
+    grid-template-columns: 1fr;
+    /* grid-template-rows: 250px 300px 300px; */
     text-align: center;
     grid-row: 1/4;
-    background-color: gainsboro;
-    border: 1px solid gray;
+    grid-column: 3/4;
   }
   .box1,
   .box2,
   .box3 {
-    height: 162px;
-    padding: 2rem;
+    display: grid;
+    justify-items: center;
+    text-align: center;
+    padding: 1rem;
     margin: 10px;
-    border: 1px solid gray;
   }
   footer {
     background-color: rgb(6, 45, 240);
