--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 35em) {
   main {
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 1fr;
     gap: 10px;
     padding: 2rem;
@@ -72,60 +72,65 @@
     padding: 2rem;
   }
   .hero {
-    height: 12rem;
-    padding: 25px;
     grid-row: 1;
     grid-column: 1/3;
-    background-color: gainsboro;
-    border: 1px solid gray;
+  }
+  .hero h1 {
+    position: absolute;
+    text-align: center;
+    padding: 15px;
+    font-size: 35px;
+    color: yellow;
+  }
+  .hero button {
+    position: absolute;
+    right: 3rem;
+    bottom: 15rem;
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    font-size: 25px;
   }
   .event {
-    padding: 7rem;
     grid-row: 7;
-    grid-column: 2/2;
-    background-color: gainsboro;
-    border: 1px solid gray;
   }
   .weather {
     padding: 25px;
     grid-row: 7;
-    background-color: gainsboro;
-    border: 1px solid gray;
+
+    object-fit: cover;
   }
   .join {
-    height: 12rem;
     padding: 25px;
     grid-row: 3;
     grid-column: 1/3;
-    background-color: gainsboro;
-    border: 1px solid gray;
   }
 
   .news {
-    height: 12rem;
+    /* height: 12rem; */
     padding: 25px;
     grid-row: 2;
     grid-column: 1/3;
-    background-color: gainsboro;
-    border: 1px solid gray;
   }
   .box {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     grid-column: 1/3;
-    justify-content: center;
-    text-align: center;
-    background-color: gainsboro;
-    border: 1px solid gray;
+  }
+  .spot1,
+  .spot2 {
+    display: inline-block;
+    padding: 5px;
   }
   .box1,
   .box2 {
-    padding: 7rem;
     margin: 10px;
     border: 1px solid gray;
   }
   .box3 {
     display: none;
-
     padding: 2rem;
     margin: 10px;
     border: 1px solid gray;
