--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -20,7 +20,7 @@ main {
 }
 
 nav ul {
-  display: flex;
+  /* display: flex; */
   list-style-type: none;
   overflow: hidden;
 }
@@ -41,7 +41,10 @@ h3,
   color: white;
 }
 img {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
+  object-fit: cover;
 }
 main,
 h2,
@@ -50,4 +53,15 @@ p {
   text-align: center;
   margin: 16px;
   color: black;
+}
+
+@media screen and (min-width: 32.5em) {
+  nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 23px;
+    padding: 10px;
+    gap: 7rem;
+  }
 }
