--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -2,4 +2,11 @@
   main {
     grid-template-columns: 1fr 1fr 1fr;
   }
+  .box-1,
+  .box-2,
+  .box-3 {
+    display: block;
+    grid-row: 3;
+    grid-column: auto;
+  }
 }
