--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -2,4 +2,10 @@
   main {
     grid-template-columns: 1fr 1fr;
   }
+  .box-3 {
+    display: grid;
+    grid-row: 2;
+    grid-column: 1/3;
+    grid-template-columns: 1fr;
+  }
 }
