--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -80,7 +80,6 @@
     text-align: center;
     padding: 15px;
     font-size: 35px;
-    color: yellow;
   }
   .hero button {
     position: absolute;
@@ -97,11 +96,17 @@
     grid-row: 7;
   }
   .weather {
-    padding: 25px;
+    padding: 20px;
     grid-row: 7;
-
     object-fit: cover;
   }
+
+  .temp {
+    font-size: 34px;
+    padding-top: 22px;
+    margin: 0;
+  }
+
   .join {
     padding: 25px;
     grid-row: 3;
@@ -122,7 +127,7 @@
   .spot1,
   .spot2 {
     display: inline-block;
-    padding: 5px;
+    /* padding: 5px; */
   }
   .box1,
   .box2 {
