--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -144,16 +144,20 @@
     background-color: rgb(6, 45, 240);
   }
   .footer-container {
+    text-align: center;
     padding: 20px;
   }
 
   .info_box {
+    display: flex;
+    justify-content: center;
     text-align: center;
     border-bottom-style: solid;
   }
   .contact {
-    text-align: center;
+    /* text-align: center; */
     padding: 10px;
+    margin-top: 3rem;
   }
   .far fa-map {
     font-size: 30px;
