--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -7,12 +7,11 @@
   }
 
   #button {
-    font-size: 3rem;
     /* display: block; */
     /* position: absolute; */
     top: 0px;
     /* left: 10px; */
-    font-size: 1.5rem;
+    font-size: 2rem;
     padding: 2rem;
     color: #fefcfd;
     background: transparent;
@@ -35,10 +34,9 @@
 
   .social {
     position: relative;
-    top: -178px;
-    right: -142px;
+    top: -170px;
+    left: 18rem;
   }
-
   ul li {
     display: flex;
     justify-content: center;
