--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -21,6 +21,10 @@
 }
 #banner {
   display: none;
+  text-align: center;
+  padding: 10px;
+  background-color: navy;
+  color: white;
 }
 .section_1 {
   background-color: rgb(6, 45, 240);
@@ -184,19 +188,14 @@ main {
   margin: 10px;
   border: 1px solid gray;
 }
-/* #############Directory############ */
-
-.main-box {
-  display: block;
-}
-
+/* ##############Directory################# */
 #menu,
 h1 {
   display: flex;
   justify-content: center;
   box-shadow: none;
   padding: 10px;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 button {
@@ -205,10 +204,9 @@ button {
   background-color: #333368;
   color: white;
 }
-
 .cards {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   text-align: center;
   background-color: rgb(47 64 112);
   color: white;
@@ -223,6 +221,7 @@ button {
   box-shadow: -4px 10px 10px #1b17b0;
   padding: 1rem;
 }
+
 .list {
   display: flex;
   flex-direction: column;
@@ -234,13 +233,6 @@ button {
 .list section {
   padding: 8px;
   margin: 8px;
-}
-.list section {
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr;
-}
-.list section p:nth-child(4) {
-  text-align: center;
 }
 
 .list section:nth-child(odd) {
