--- a/chamber/style/large.css
+++ b/chamber/style/large.css
@@ -72,7 +72,7 @@
     grid-column: 2/3;
   }
   .hero h1 {
-    padding: 15px;
+    padding: 25px;
     font-size: 27px;
   }
   .hero button {
@@ -118,6 +118,92 @@
     text-align: center;
     padding: 1rem;
     margin: 10px;
+  }
+
+  /* #############Directory############ */
+
+  .main-box {
+    display: block;
+  }
+
+  #menu,
+  h1 {
+    font-size: 2rem;
+  }
+
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    background-color: rgb(47 64 112);
+    color: white;
+  }
+
+  .list section {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+  }
+  .list section p:nth-child(4) {
+    text-align: center;
+  }
+
+  /* #############Join############ */
+
+  .join-box h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .join-box {
+    display: block;
+    max-width: 300px;
+    margin: 20px auto;
+    padding: 20px;
+    /* border: 1px solid #ccc; */
+  }
+
+  form label {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+
+  select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+
+  input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  /* CSS for thankyou.html */
+
+  .message-box {
+    display: block;
+  }
+
+  .message-box p,
+  h1 {
+    text-align: center;
   }
   footer {
     background-color: rgb(6, 45, 240);
