--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -138,6 +138,22 @@
     margin: 10px;
     border: 1px solid gray;
   }
+
+  /* #############Directory############ */
+
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    background-color: rgb(47 64 112);
+    color: white;
+  }
+
+  .list section {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+
   footer {
     background-color: rgb(6, 45, 240);
   }
