--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -239,6 +239,66 @@ button {
   background-color: #67e2f4;
 }
 
+/* #############Join############ */
+
+.join-box h1 {
+  font-size: 24px;
+  text-align: center;
+}
+
+.join-box {
+  display: block;
+  max-width: 300px;
+  margin: 20px auto;
+  padding: 20px;
+  /* border: 1px solid #ccc; */
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+select {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+form {
+  display: grid;
+  grid-gap: 10px;
+}
+
+label {
+  font-weight: bold;
+}
+
+textarea {
+  height: 100px;
+}
+
+.hidden {
+  display: none;
+}
+
 footer {
   background-color: rgb(6, 45, 240);
 }
