--- a/lesson10/css/weatherapi.css
+++ b/lesson10/css/weatherapi.css
@@ -4,7 +4,7 @@
   max-width: 600px;
   margin: 1rem auto;
   font-size: 25px;
-  color: blue;
+  color: white;
   font-family: serif;
   background-color: black;
 }
