--- a/lesson10/css/weatherapi.css
+++ b/lesson10/css/weatherapi.css
@@ -6,5 +6,8 @@
   font-size: 25px;
   color: white;
   font-family: serif;
-  background-color: black;
+  background-color: #08124e;
+  border-radius: 5%;
+  padding: 10px;
+  box-shadow: -11px 12px 14px blue;
 }
