--- a/lesson10/css/weatherapi.css
+++ b/lesson10/css/weatherapi.css
@@ -6,7 +6,7 @@
   font-size: 25px;
   color: white;
   font-family: serif;
-  background-color: #08124e;
+  background-color: #474f81;
   border-radius: 5%;
   padding: 10px;
   box-shadow: -11px 12px 14px blue;
