--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -118,7 +118,7 @@ main {
   border: 1px solid gray;
   text-align: center;
 }
-.weather {
+/* .weather {
   display: grid;
   grid-template-columns: 40% 60%;
   padding: 15px;
@@ -157,7 +157,7 @@ main {
 .wind-chill {
   grid-column: 1/3;
   padding-left: 25px;
-}
+} */
 .join {
   display: none;
   background-color: #26d748;
@@ -314,4 +314,41 @@ footer {
 .contact {
   text-align: center;
   padding: 10px;
+}
+
+/* ##############weather################ */
+
+.weather {
+  padding: 15px;
+  background-color: #26d748;
+  border: 1px solid gray;
+}
+.weather h1 {
+  text-align: center;
+  padding: 5px;
+  margin: 0;
+  font-size: 2rem;
+  justify-content: center;
+}
+
+.weather p {
+  float: right;
+  font-size: 3.5rem;
+  margin-top: 2.5rem;
+}
+.weather img {
+  width: 50%;
+}
+figcaption {
+  text-align: center;
+  border-bottom: 1px solid black;
+  font-size: 21px;
+  font-weight: bold;
+}
+
+#wind-speed,
+#wind-chill {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 5px;
 }
