--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -93,18 +93,23 @@
   .event {
     grid-row: 7;
   }
+
   .weather {
     padding: 20px;
     grid-row: 7;
     object-fit: cover;
   }
 
-  .temp {
+  .weather p {
+    font-size: 2.5rem;
+    margin-top: 1.5rem;
+  }
+
+  /* .temp {
     font-size: 34px;
     padding-top: 22px;
     margin: 0;
-  }
-
+  } */
   .join {
     padding: 25px;
     grid-row: 3;
