--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -35,7 +35,7 @@
 }
 
 .logo img {
-  border-radius: 50%;
+  /* border-radius: 50%; */
   padding: 10px;
   height: 150px;
 }
@@ -188,6 +188,28 @@ main {
   margin: 10px;
   border: 1px solid gray;
 }
+/* ##############Discover################# */
+.discover-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+#visit-info {
+  background-color: #292626;
+  color: white;
+  margin: 5px;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 25px;
+}
+.discover-page h1,
+p {
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+}
+
 /* ##############Directory################# */
 #menu,
 h1 {
