--- a/chamber/style/large.css
+++ b/chamber/style/large.css
@@ -28,10 +28,10 @@
 
   .logo img {
     /* width: 100%; */
-    border-radius: 50%;
+    /* border-radius: 50%; */
     /* padding: 10px; */
     /* height: 180px; */
-    margin-left: 0;
+    margin-left: 25px;
   }
   ul {
     display: flex;
