--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -100,8 +100,8 @@
   }
 
   .weather p {
-    font-size: 2.5rem;
-    margin-top: 1.5rem;
+    font-size: 28px;
+    margin-top: 11px;
   }
 
   /* .temp {
