--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -54,6 +54,11 @@ p {
   margin: 16px;
   color: black;
 }
+footer p {
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+}
 
 @media screen and (min-width: 60em) {
   nav ul {
