--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,18 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    
-    display: grid;
-    align-items: center;
-    align-content: center;
-    padding: 1rem;
+  display: grid;
+  align-items: center;
+  align-content: center;
+  padding: 1rem;
 
-    background-color:white;
-    
+  background-color: white;
 }
 
-.header-content{
-
+.header-content {
   background-color: rgb(24, 0, 161);
   display: grid;
   grid-column: 1/9;
@@ -24,97 +21,78 @@ body {
   margin: auto;
   border-radius: 25px;
   box-shadow: 0 10px 10px rgb(69, 200, 223);
-    
-
 }
 
 .name {
-   
-display: grid;
-grid-column: 3/9;
-grid-row: 1/2;
-align-items: center;
-align-content: center;
-font-size: 40px;
-color: rgb(239, 233, 233);
-font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  grid-column: 3/9;
+  grid-row: 1/2;
+  align-items: center;
+  align-content: center;
+  font-size: 40px;
+  color: rgb(239, 233, 233);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-    
-.image,img {
-    display: grid;
-    grid-column: 1/3;
-    grid-row: 1/2;
-    margin: 25px;
-    border-radius: 50px;
-   
-   
+.image,
+img {
+  display: grid;
+  grid-column: 1/3;
+  grid-row: 1/2;
+  margin: 25px;
+  border-radius: 50px;
 }
-
-
-
 
 .list {
-    display: grid ;
-    grid-column: 1/9;
-    margin: auto;
-    
-
-    
-    
+  display: grid;
+  grid-column: 1/9;
+  margin: auto;
 }
-list p{
-    
-    color: black;
-    
+list p {
+  color: black;
 }
-ul{
-    margin: auto;
-    padding: 15px;
-    font-size: 25px;
-    margin-left: 50px;
+ul {
+  margin: auto;
+  padding: 15px;
+  font-size: 25px;
+  margin-left: 50px;
 }
-hr{
-    border: 1px solid rgb(9, 19, 196);
-    visibility: visible;
-    width: 1000px;
-    margin: 5px;
+hr {
+  border: 1px solid rgb(9, 19, 196);
+  visibility: visible;
+  width: 1000px;
+  margin: 5px;
 }
-
 
 h2 {
-
-    margin-top: 40px;
-    padding: 5px;
-    font-size: 40px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+  margin-top: 40px;
+  padding: 5px;
+  font-size: 40px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-footer{
-    display: grid;
-    grid-column: 1/9;
-    grid-row: 3/9;
-    margin: auto;
-
+footer {
+  display: grid;
+  grid-column: 1/9;
+  grid-row: 3/9;
+  margin: auto;
 }
 
-footer p{
-    font-size: 20px;
-    color: aliceblue;
-    text-align: center;
-    margin: auto;
-    
-
+footer p {
+  font-size: 20px;
+  color: aliceblue;
+  text-align: center;
+  margin: auto;
 }
 
 .footer-container {
-    display: grid;
-    margin-top: 35px;
-    height: 100px;
-    width: 1020px;
-    align-items: center;
-    align-content: center;
-    border-radius: 25px;
-    background-color: rgb(24, 0, 161);
-    box-shadow: 0 10px 10px rgb(69, 200, 223);
+  display: grid;
+  margin-top: 35px;
+  height: 100px;
+  width: 1020px;
+  align-items: center;
+  align-content: center;
+  border-radius: 25px;
+  background-color: rgb(24, 0, 161);
+  box-shadow: 0 10px 10px rgb(69, 200, 223);
 }
