--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -33,8 +33,14 @@
   color: white;
   padding: 5px;
 }
+.name h1 {
+  color: whitesmoke;
+}
 .hero {
   position: relative;
+}
+.hero h1 {
+  color: cornsilk;
 }
 .section_1 {
   background-color: rgb(6, 45, 240);
