--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -65,6 +65,10 @@
   object-fit: cover;
 }
 
+.box img {
+  width: 200px;
+}
+
 ul li {
   display: flex;
   justify-content: center;
@@ -118,7 +122,7 @@ main {
   text-align: center;
   padding: 5px;
   font-size: 18px;
-  color: yellow;
+  color: white;
 }
 
 .event {
@@ -216,7 +220,6 @@ a {
 
 .contact-box h1,
 h2 {
-  color: black;
   text-align: center;
 }
 
@@ -273,9 +276,6 @@ button {
   grid-template-columns: 1fr;
   text-align: center;
   background-color: rgb(47 64 112);
-  color: white;
-}
-.cards h2 {
   color: white;
 }
 
