--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -236,7 +236,7 @@ h2 {
   padding: 25px;
 }
 button:hover {
-  background-color: #45a049;
+  background-color: #7a8bde;
 }
 
 /* ##############Discover################# */
