--- a/chamber/style/base.css
+++ b/chamber/style/base.css
@@ -247,9 +247,11 @@ button:hover {
   align-items: center;
   text-align: center;
 }
+
 .discover-page img {
   width: 260px;
   border-radius: 25px;
+  padding: 15px;
 }
 #visit-info {
   background-color: #292626;
