--- a/project/css/small.css
+++ b/project/css/small.css
@@ -28,7 +28,7 @@ header {
   border-radius: 25px;
   text-align: center;
   position: absolute;
-  top: 45%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: black;
@@ -48,7 +48,7 @@ header {
 }
 .button a {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -73,7 +73,7 @@ header {
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   max-width: 800px;
-  margin: 15px auto;
+  margin: 40px 20px;
 }
 
 .summary img {
@@ -87,17 +87,7 @@ header {
 .summary p {
   font-size: 16px;
   line-height: 1.6;
-  margin-bottom: 15px;
   padding: 15px;
-}
-
-.summary a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-.summary a:hover {
-  text-decoration: underline;
 }
 
 #total-drinks {
@@ -123,10 +113,10 @@ footer {
   margin: 25px;
 }
 
-.column {
+/* .column {
   display: flex;
   flex-direction: column;
-}
+} */
 
 .social {
   display: flex;
@@ -307,45 +297,58 @@ iframe {
 
 /* ####################### Button ##################### */
 
-#mobile-menu-button {
-  display: block;
-  /* position: absolute; */
-  font-size: 1.5rem;
-  padding: 5px;
-  color: #000;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-#mobile-menu {
-  display: none;
-}
-
-#mobile-menu ul {
+li {
   list-style: none;
-  /* background-color: #fefcfd; */
-
-  padding: 0;
-  margin: 0;
 }
 
-#mobile-menu li {
-  padding: 10px;
-}
-
-#mobile-menu a {
+a {
+  color: white;
   text-decoration: none;
-  color: #1b1ceb;
 }
 
-/* Show the mobile menu when the button is clicked */
-#mobile-menu.open {
+.navbar {
+  margin: auto;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: rgb(42, 42, 82);
+}
+
+.hambuger {
   display: block;
 }
 
-/* Style for menu items on hover */
-#mobile-menu a:hover {
-  background-color: lightskyblue;
-  color: #333;
+.hambuger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hambuger.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.hambuger.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+}
+.nav-menu {
+  position: fixed;
+  left: -100%;
+  top: 100px;
+  gap: 0;
+  flex-direction: column;
+  background-color: #262626;
+  width: 100%;
+  text-align: center;
+  transition: 0.3s;
+}
+.nav-item {
+  margin: 16px 0;
+}
+.nav-menu.active {
+  left: 0;
 }
