--- a/project/css/medium.css
+++ b/project/css/medium.css
@@ -16,5 +16,9 @@
     transform: translate(-50%, -50%);
   }
 
+  .hero h1 {
+    top: 35%;
+  }
+
   /* ####################### Button ##################### */
 }
