--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -33,8 +33,13 @@
 
   .social {
     position: relative;
-    top: -170px;
+    top: -210px;
     left: 18rem;
+  }
+
+  .social img {
+    width: 40px;
+    height: 40px;
   }
   ul li {
     display: flex;
