--- a/chamber/style/large.css
+++ b/chamber/style/large.css
@@ -122,7 +122,7 @@
     grid-row: 3/3;
     grid-column: 2/2;
   }
-  .box {
+  #spotlight-container {
     grid-template-columns: 1fr;
     /* grid-template-rows: 250px 300px 300px; */
     text-align: center;
