--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -130,7 +130,7 @@
     grid-row: 2;
     grid-column: 1/3;
   }
-  .box {
+  #spotlight-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column: 1/3;
