--- a/chamber/style/medium.css
+++ b/chamber/style/medium.css
@@ -130,22 +130,19 @@
     grid-row: 2;
     grid-column: 1/3;
   }
+
   #spotlight-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column: 1/3;
   }
-  .spot1,
-  .spot2 {
-    display: inline-block;
-    /* padding: 5px; */
-  }
-  .box1,
-  .box2 {
+
+  .spotlight-1,
+  .spotlight-2 {
     margin: 10px;
     border: 1px solid white;
   }
-  .box3 {
+  .spotlight-3 {
     display: none;
     padding: 2rem;
     margin: 10px;
